--- a/counter.html
+++ b/counter.html
@@ -1,7 +1,7 @@
 <html>
 
 
-<body style="background-image:url('https://wallpaperaccess.com/full/2413551.jpg');background-repeat:no-repeat;background-size: cover;">
+<body style="background-image:url('wallpaper.jpeg');background-repeat:no-repeat;background-size: cover;">
     <div class="container">
         <h1>Passenger counter</h1>
 
