--- a/counter.html
+++ b/counter.html
@@ -2,6 +2,7 @@
 
 
 <body style="background-image:url('wallpaper.jpeg');background-repeat:no-repeat;background-size: cover;">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <div class="container">
         <h1>Passenger counter</h1>
 
@@ -18,7 +19,7 @@
         .container {
             text-align: center;
             border: 3px solid white;
-            padding: 200px;
+            padding: 380px;
             margin: auto;
         }
 
